@@ -142,6 +142,30 @@ node_types:
                 get_state:
                     implementation: vsphere.vsphere_server_plugin.server.get_state
                     inputs: {}
+            cloudify.interfaces.power:
+                'on':
+                    implementation: vsphere.vsphere_server_plugin.power.power_on
+                'off':
+                    implementation: vsphere.vsphere_server_plugin.power.power_off
+                reset:
+                    implementation: vsphere.vsphere_server_plugin.power.reset
+                reboot:
+                    implementation: vsphere.vsphere_server_plugin.power.reboot
+                    inputs:
+                      max_wait_time:
+                        type: integer
+                        default: 300
+                        description: >
+                          How long to wait for the operation to complete.
+                shut_down:
+                    implementation: vsphere.vsphere_server_plugin.power.shut_down
+                    inputs:
+                      max_wait_time:
+                        type: integer
+                        default: 300
+                        description: >
+                          How long to wait for the operation to complete.
+
 
     cloudify.vsphere.nodes.WindowsServer:
         derived_from: cloudify.vsphere.nodes.Server
