@@ -1,3 +1,5 @@
+tbd:
+  - Add Server power operations (on, off, reboot, reset)
 2.2.0:
   - Support setting organization on Windows VMs.
   - Support Windows custom sysprep.
